# tp_autoshard

./: .gitignore  README.md  baseline_results.json  dummy_training_data.txt  fast_backend_test.py  generate_opt125m_graph.py  pyproject.toml  quick_backend_test.py  temp.txt  test_allgather_debug.py  test_backend_verification.py  test_backward_pass_correctness.py  test_backward_pass_per_operation.py  test_communication_primitives.py  test_dense_execution.py  test_distributed_backend.py  test_einsum_execution.py  test_embedding_execution.py  test_integration_fast.py  test_kerasnlp_models.py  test_mha_execution.py  test_mlp_config.py  test_mlp_execution.py  test_mlp_sharding.py  test_models.py  test_multi_backend_kerasnlp.py  test_opt125m_comprehensive.py  test_opt125m_keras.py  test_opt125m_simple.py  test_opt125m_verification.py  test_realistic_memory_savings.py  test_sharded_optimizer.py  test_sharding_strategies.py  test_simple_training.py  test_tensor_parallel_training.py  test_tensor_parallel_verification.py  test_upstream_gradient_slicing.py  tp_results.json
src/tensor_parallel/: tensor_parallel.py
src/tensor_parallel_keras/: README.md  __init__.py  autoconfig_keras.py  communications_keras.py  config_keras.py  coordinated_optimizer.py  cross_device_ops_keras.py  distributed_backend.py  distribution_lib.py  parameter_sharding.py  shard_keras.py  sharding_keras.py  state_actions_keras.py  tensor_parallel_keras.py  test_2_devices.py  test_num_stab.py  testing.py  utils_keras.py
tests/: test_keras_basic.py  test_keras_sharding.py
